--- a/index.html
+++ b/index.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Javascript + DOM</title>
+	<title>MY-TODOs</title>
 	
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
-	
 	<div>
-			<div class="first">
+		<div class="first">
 			<h1 class="titleName">Todo List</h1>
-			</div>
-			<p id="message"></p>
-			<div class="inputSection">
-			<p class="completed">Add new</p>	
+		</div>
+
+		<p id="message"></p>
+		<div class="inputSection">
+			<p class="add">Add new task here</p>	
 			<input class="getBox" id="userinput" type="text" placeholder="Enter items....">
 			<button id="enter" class="addBtn">Add</button>
-			</div>
-  
+		</div>
 
-		<div>	
-
-			<ul>
-				<li>Go grocery shopping</li>
-				<li>Return library books</li>
-				<li>Buy something for father's day</li>
-				<li>Get a haircute</li>
-				<li>Finish online coding course</li>
+		<div>
+			<ul>	
 			</ul>
-
 		</div>	
 	
-		
     </div>
 
 	<script type="text/javascript" src="script.js"></script>
